src/davinDBMS/DavinDBMSParser.java
/* Generated By:JavaCC: Do not edit this line. DavinDBMSParser.java */
//import
package davinDBMS;
import davinDBMS.entity.*;
import davinDBMS.query.*;

import java.io.File;
import java.util.ArrayList;

import com.sleepycat.je.Database;
import com.sleepycat.je.DatabaseException;
import com.sleepycat.je.DatabaseConfig;
import com.sleepycat.je.Cursor;

import com.sleepycat.je.Environment;
import com.sleepycat.je.EnvironmentConfig;


public class DavinDBMSParser implements DavinDBMSParserConstants {

  public static void main(String args[]) throws ParseException
  {
    //Environment & Database define
    Environment davinDbEnvironment = null;
    Database davinDatabase = null;

        /* OPENING DB */
        //Open Database Environment or if not, create one.
    EnvironmentConfig envConfig = new EnvironmentConfig();
    envConfig.setAllowCreate(true);

    File dbDirectory = new File("db/");
    if(!dbDirectory.exists()) {
          dbDirectory.mkdirs();
    }

    davinDbEnvironment = new Environment(new File("db/"), envConfig);

    //Open Database or if not, create one.
        DatabaseConfig dbConfig = new DatabaseConfig();
        dbConfig.setAllowCreate(true);
        dbConfig.setSortedDuplicates(true);
        davinDatabase = davinDbEnvironment.openDatabase(null, "davinDatabase", dbConfig);


    DavinDBMSParser parser = new DavinDBMSParser(System.in);
    System.out.print("DB_2014-16187> ");

    //iterate until EXIT
    while (true)
    {
          ArrayList<Query> queries = new ArrayList<Query>(); //can process multiple queries in one line

      try {
              parser.command(queries);
          }
          catch (ParseException e) {
          System.out.println(Messages.SYNTAX_ERROR.getMessage()); //print syntax error message
          DavinDBMSParser.ReInit(System.in); //iterate again
      }
          finally { //although one of queries has syntax error, preceding queries should be processed
                for(Query query : queries) { //process queries one by one
                  if(query.getType() == Query.QueryType.EXIT) { //if EXIT
                        exit(davinDatabase, davinDbEnvironment); //close DB and terminate this program
                  }
                  else {
                        query.apply(davinDatabase); //apply the query according to its type
                  }
                }

                System.out.print("DB_2014-16187> ");
          }
    }
  }

  //close DB and terminate this program
  public static void exit(Database database, Environment dbEnvironment) {
    /* CLOSING DB */
        if(database != null) database.close();
        if(dbEnvironment != null) dbEnvironment.close();

        System.exit(0); //end of program
  }

  static final public void command(ArrayList<Query> queries) throws ParseException {
  Query query;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EXIT:
      jj_consume_token(EXIT);
      jj_consume_token(END_OF_QUERIES);
      query = new ExitQuery();
      queries.add(query);
      break;
    case CREATE_TABLE:
    case DROP_TABLE:
    case DESC:
    case INSERT_INTO:
    case DELETE_FROM:
    case SELECT:
    case SHOW_TABLES:
      queryList(queries);
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void queryList(ArrayList<Query> queries) throws ParseException {
  Query query = null;
    query = query();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SEMICOLON:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
      jj_consume_token(SEMICOLON);
    queries.add(query);
      query = query();
    }
    jj_consume_token(END_OF_QUERIES);
    queries.add(query);
  }

  static final public Query query() throws ParseException {
  Query query = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CREATE_TABLE:
      query = createTableQuery();
      break;
    case DROP_TABLE:
      query = dropTableQuery();
      break;
    case DESC:
      query = descQuery();
      break;
    case INSERT_INTO:
      query = insertQuery();
      break;
    case DELETE_FROM:
      deleteQuery();
      break;
    case SELECT:
      query = selectQuery();
      break;
    case SHOW_TABLES:
      query = showTablesQuery();
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return query;}
    throw new Error("Missing return statement in function");
  }

//query grammar
  static final public CreateTableQuery createTableQuery() throws ParseException {
  CreateTableQuery query = new CreateTableQuery();
  Table table;
  String name;
    jj_consume_token(CREATE_TABLE);
    name = tableName();
    table = new Table(name);
    query.setTable(table);
    tableElementList(query);
    {if (true) return query;}
    throw new Error("Missing return statement in function");
  }

  static final public DropTableQuery dropTableQuery() throws ParseException {
  DropTableQuery query = new DropTableQuery();
  Table table;
  String name;
    jj_consume_token(DROP_TABLE);
    name = tableName();
    table = new Table(name);
    query.setTable(table);
    {if (true) return query;}
    throw new Error("Missing return statement in function");
  }

  static final public DescQuery descQuery() throws ParseException {
  DescQuery query = new DescQuery();
  Table table;
  String name;
    jj_consume_token(DESC);
    name = tableName();
    table = new Table(name);
    query.setTable(table);
    {if (true) return query;}
    throw new Error("Missing return statement in function");
  }

  static final public InsertQuery insertQuery() throws ParseException {
  InsertQuery query = new InsertQuery();
  Table table;
  String name;
    jj_consume_token(INSERT_INTO);
    name = tableName();
    insertColumnsAndSource(query);
    table = new Table(name);
    query.setTable(table);
    {if (true) return query;}
    throw new Error("Missing return statement in function");
  }

  static final public void deleteQuery() throws ParseException {
    jj_consume_token(DELETE_FROM);
    tableName();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case WHERE:
      whereClause();
      break;
    default:
      jj_la1[3] = jj_gen;
      ;
    }
  }

  static final public SelectQuery selectQuery() throws ParseException {
  SelectQuery query = new SelectQuery();
    jj_consume_token(SELECT);
    selectList(query);
    tableExpression(query);
    {if (true) return query;}
    throw new Error("Missing return statement in function");
  }

  static final public ShowTablesQuery showTablesQuery() throws ParseException {
  ShowTablesQuery query = new ShowTablesQuery();
    jj_consume_token(SHOW_TABLES);
    {if (true) return query;}
    throw new Error("Missing return statement in function");
  }

//specification of each element of queries
  static final public void tableElementList(CreateTableQuery query) throws ParseException {
    jj_consume_token(LEFT_PAREN);
    tableElement(query);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_2;
      }
      jj_consume_token(COMMA);
      tableElement(query);
    }
    jj_consume_token(RIGHT_PAREN);
  }

  static final public void tableElement(CreateTableQuery query) throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LEGAL_IDENTIFIER:
      columnDefinition(query.getTable());
      break;
    case PRIMARY_KEY:
    case FOREIGN_KEY:
      tableConstraintDefinition(query);
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void columnDefinition(Table table) throws ParseException {
  String name;
  Column column;
    name = columnName();
    column = new Column(name);
    dataType(column);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NOT_NULL:
      jj_consume_token(NOT_NULL);
      column.setNotNull();
      break;
    default:
      jj_la1[6] = jj_gen;
      ;
    }
    table.addColumn(column);
  }

  static final public void tableConstraintDefinition(CreateTableQuery query) throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PRIMARY_KEY:
      primaryKeyConstraint(query);
      break;
    case FOREIGN_KEY:
      referentialConstraint(query);
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void primaryKeyConstraint(CreateTableQuery query) throws ParseException {
  ArrayList<String> primaryKeys;
    jj_consume_token(PRIMARY_KEY);
    primaryKeys = columnNameList();
    query.setPrimaryKeys(primaryKeys);
  }

  static final public void referentialConstraint(CreateTableQuery query) throws ParseException {
  Reference reference;
  ArrayList<String> foreignKeys;
  String referToTableName;
  ArrayList<String> referToColumnsName;
    jj_consume_token(FOREIGN_KEY);
    foreignKeys = columnNameList();
    jj_consume_token(REFERENCES);
    referToTableName = tableName();
    referToColumnsName = columnNameList();
    reference = new Reference(foreignKeys, referToTableName, referToColumnsName);
    query.getReferences().add(reference);
  }

  static final public ArrayList<String> columnNameList() throws ParseException {
  ArrayList<String> names = new ArrayList<String>();
  String name;
    jj_consume_token(LEFT_PAREN);
    name = columnName();
    names.add(name);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_3;
      }
      jj_consume_token(COMMA);
      name = columnName();
      names.add(name);
    }
    jj_consume_token(RIGHT_PAREN);
    {if (true) return names;}
    throw new Error("Missing return statement in function");
  }

  static final public void dataType(Column column) throws ParseException {
  Token nToken;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
      jj_consume_token(INT);
    column.setType(Column.DataType.INT);
      break;
    case CHAR:
      jj_consume_token(CHAR);
      column.setType(Column.DataType.CHAR);
      jj_consume_token(LEFT_PAREN);
      nToken = jj_consume_token(INT_VALUE);
      column.setCharLength(Integer.parseInt(nToken.image));
      jj_consume_token(RIGHT_PAREN);
      break;
    case DATE:
      jj_consume_token(DATE);
    column.setType(Column.DataType.DATE);
      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public String tableName() throws ParseException {
  Token nameToken;
    nameToken = jj_consume_token(LEGAL_IDENTIFIER);
    {if (true) return nameToken.image.toLowerCase();}
    throw new Error("Missing return statement in function");
  }

  static final public String columnName() throws ParseException {
  Token nameToken;
    nameToken = jj_consume_token(LEGAL_IDENTIFIER);
    {if (true) return nameToken.image.toLowerCase();}
    throw new Error("Missing return statement in function");
  }

  static final public void insertColumnsAndSource(InsertQuery query) throws ParseException {
  ArrayList<String> columnsName;
  ArrayList<Value> values;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LEFT_PAREN:
      columnsName = columnNameList();
      query.setColumnsName(columnsName);
      break;
    default:
      jj_la1[10] = jj_gen;
      ;
    }
    values = valueList();
    query.setValues(values);
  }

  static final public ArrayList<Value> valueList() throws ParseException {
  ArrayList<Value> values = new ArrayList<Value>();
  Value value;
    jj_consume_token(VALUES);
    jj_consume_token(LEFT_PAREN);
    value = value();
    values.add(value);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[11] = jj_gen;
        break label_4;
      }
      jj_consume_token(COMMA);
      value = value();
      values.add(value);
    }
    jj_consume_token(RIGHT_PAREN);
    {if (true) return values;}
    throw new Error("Missing return statement in function");
  }

  static final public Value value() throws ParseException {
  Value value;
  Token valueToken;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NULL:
      valueToken = jj_consume_token(NULL);
      {if (true) return new Value(valueToken.image);}
      break;
    case INT_VALUE:
    case CHAR_STRING:
    case DATE_VALUE:
      value = comparableValue();
      {if (true) return value;}
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Value comparableValue() throws ParseException {
  Value value = new Value();
  String valueString;
  Token valueToken;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT_VALUE:
      valueToken = jj_consume_token(INT_VALUE);
      valueString = valueToken.image;
      value.setType(Column.DataType.INT);
      break;
    case CHAR_STRING:
      valueToken = jj_consume_token(CHAR_STRING);
      valueString = valueToken.image.substring(1, valueToken.image.length()-1);
      value.setType(Column.DataType.CHAR);
      break;
    case DATE_VALUE:
      valueToken = jj_consume_token(DATE_VALUE);
      valueString = valueToken.image;
      value.setType(Column.DataType.DATE);
      break;
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    value.setVal(valueString);
    {if (true) return value;}
    throw new Error("Missing return statement in function");
  }

  static final public void whereClause() throws ParseException {
    jj_consume_token(WHERE);
    booleanValueExpression();
  }

  static final public void booleanValueExpression() throws ParseException {
    booleanTerm();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OR:
        ;
        break;
      default:
        jj_la1[14] = jj_gen;
        break label_5;
      }
      jj_consume_token(OR);
      booleanTerm();
    }
  }

  static final public void booleanTerm() throws ParseException {
    booleanFactor();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
        ;
        break;
      default:
        jj_la1[15] = jj_gen;
        break label_6;
      }
      jj_consume_token(AND);
      booleanFactor();
    }
  }

  static final public void booleanFactor() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NOT:
      jj_consume_token(NOT);
      break;
    default:
      jj_la1[16] = jj_gen;
      ;
    }
    booleanTest();
  }

  static final public void booleanTest() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT_VALUE:
    case LEGAL_IDENTIFIER:
    case CHAR_STRING:
    case DATE_VALUE:
      predicate();
      break;
    case LEFT_PAREN:
      parenthesizedBooleanExpression();
      break;
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void predicate() throws ParseException {
    if (jj_2_1(4)) {
      comparisonPredicate();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LEGAL_IDENTIFIER:
        nullPredicate();
        break;
      default:
        jj_la1[18] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void comparisonPredicate() throws ParseException {
    compOperand();
    jj_consume_token(COMP_OP);
    compOperand();
  }

  static final public void compOperand() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT_VALUE:
    case CHAR_STRING:
    case DATE_VALUE:
      comparableValue();
      break;
    case LEGAL_IDENTIFIER:
      if (jj_2_2(2)) {
        tableName();
        jj_consume_token(PERIOD);
      } else {
        ;
      }
      columnName();
      break;
    default:
      jj_la1[19] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void parenthesizedBooleanExpression() throws ParseException {
    jj_consume_token(LEFT_PAREN);
    booleanValueExpression();
    jj_consume_token(RIGHT_PAREN);
  }

  static final public void nullPredicate() throws ParseException {
    if (jj_2_3(2)) {
      tableName();
      jj_consume_token(PERIOD);
    } else {
      ;
    }
    columnName();
    nullOperation();
  }

  static final public void nullOperation() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IS_NULL:
      jj_consume_token(IS_NULL);
      break;
    case IS_NOT_NULL:
      jj_consume_token(IS_NOT_NULL);
      break;
    default:
      jj_la1[20] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }
